src/objects/Apttus_Config2__CollaborationRequest__c.object
<CustomObject>
    <description>This object will persist information for quote collaboration tasks and will be used to relate the parent configurations and its related child configurations.</description>
    <fields>
        <fullName>Apttus_Config2__ChildConfigurationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The child configuration associated with this collaboration task.</description>
        <inlineHelpText>The child configuration associated with this collaboration task.</inlineHelpText>
        <label>Child Product Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipName>Collaboration_TasksChild</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CollaborationType__c</fullName>
        <description>Specifies what type of collaboration this request is created for.</description>
        <inlineHelpText>Specifies what type of collaboration this request is created for.</inlineHelpText>
        <label>Collaboration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Peer-To-Peer</fullName>
                    <default>true</default>
                    <label>Peer-To-Peer</label>
                </value>
                <value>
                    <fullName>Multi-Tier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CompletionDueDate__c</fullName>
        <description>The date by which the child configuration should be completed and submitted for merging.</description>
        <inlineHelpText>The date by which the child configuration should be completed and submitted for merging.</inlineHelpText>
        <label>Completion Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigureProducts__c</fullName>
        <formula>IF( ($User.Id ==  OwnerId),
     HYPERLINK(&quot;/apex/Apttus_Config2__CollabRequestInline?id=&quot;&amp;Id&amp;&quot;&amp;flow=NGDefault&quot; , IMAGE(&quot;/resource/Apttus_Config2__Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_self&quot;),
     NULL
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configure Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsParentCartVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the collaborator gets read-only access to the parent cart</description>
        <inlineHelpText>Specifies whether the collaborator gets read-only access to the parent cart</inlineHelpText>
        <label>Grant Access to Merge Cart (Read Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentBusinessObjectId__c</fullName>
        <description>Id of the parent business object</description>
        <inlineHelpText>Id of the parent business object</inlineHelpText>
        <label>Parent Business Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentBusinessObjectType__c</fullName>
        <description>Type of the parent business object.</description>
        <inlineHelpText>Type of the parent business object.</inlineHelpText>
        <label>Parent Business Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Collaboration Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentConfigRequestId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Config Request record of Parent Cart</description>
        <inlineHelpText>Lookup to the Config Request record of Parent Cart</inlineHelpText>
        <label>Parent Config Request Id</label>
        <referenceTo>Apttus_Config2__TempObject__c</referenceTo>
        <relationshipLabel>Collaboration Requests</relationshipLabel>
        <relationshipName>CollaborationRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentConfigurationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent configuration for which this collaboration task is created.</description>
        <inlineHelpText>Enter the parent configuration id</inlineHelpText>
        <label>Parent Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipName>Collaboration_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated price list</description>
        <inlineHelpText>ID of the associated price list</inlineHelpText>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Collaboration Requests</relationshipLabel>
        <relationshipName>CollaborationRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Priority__c</fullName>
        <description>Holds the priority of the task, P1 being highest priority and P5 being lowest.</description>
        <inlineHelpText>Priority of the task, P1 being highest priority and P5 being lowest.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>P3</fullName>
                </value>
                <value>
                    <fullName>P4</fullName>
                </value>
                <value>
                    <fullName>P5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Specifications__c</fullName>
        <description>Holds any specifications to be passed on to the collaborator.</description>
        <inlineHelpText>Holds any specifications to be passed on to the collaborator.</inlineHelpText>
        <label>Specifications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartDate__c</fullName>
        <description>The date by which the child configuration should be started.</description>
        <inlineHelpText>The date by which the child configuration should be started.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Collaboration Request</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__StartDate__c</columns>
        <columns>Apttus_Config2__Priority__c</columns>
        <columns>Apttus_Config2__ParentConfigurationId__c</columns>
        <columns>Apttus_Config2__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0000000000}</displayFormat>
        <label>Collaboration Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaboration Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>